fixed copy trading overlaping

--- a/packages/bot-web-ui/src/components/copy_trading/style.css
+++ b/packages/bot-web-ui/src/components/copy_trading/style.css
@@ -5,10 +5,6 @@
     flex-direction: column;
 }
 
-.dc-dialog__content {
-    overflow: scroll;
-}
-
 .close-button {
     position: absolute;
     top: 10px;
